<resources>
    <string name="app_name">finishProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Главное меню</string>
    <string name="menu_reminders">Напоминания</string>
    <string name="menu_exit">Выход</string>
    <string name="btn_registrationU"><u><b>Регистрация</b></u></string>
    <string name="btn_registration">Регистрация</string>
    <string name="btn_loginU"><u><b>Вход</b></u></string>
    <string name="btn_login">Вход</string>
    <string name="e_mail">e-mail</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="first_name">Имя</string>
    <string name="last_Name">Фамилия</string>

    <string name="date">DATE</string>
    <string name="timeStart">TIME START</string>
    <string name="distanse">DISTANSE</string>
    <string name="jogging_time">JOGGING TIME</string>
</resources>
