<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:id="@+id/cardView"
        android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:text="@string/date"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="@+id/time_start"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@+id/date"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@+id/date"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time_start"
                android:text="@string/timeStart"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintTop_toBottomOf="@+id/date"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeStart"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="@+id/time_start"
                app:layout_constraintBottom_toTopOf="@+id/time_start"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/distance"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/distanse"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/time_start"
                app:layout_constraintEnd_toStartOf="@+id/jogging_time"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distanse"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@+id/distance"
                app:layout_constraintStart_toStartOf="@+id/distance"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/jogging_time"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/jogging_time"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/jogging_time_text"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jogging_time"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@+id/jogging_time"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/jogging_time_text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

